# new_vlm_exploration

./: .gitignore  JOURNAL.md
.cursor/rules/: accessibility-checklist.mdc  api-and-interface-design.mdc  browser-testing-with-devtools.mdc  ci-cd-and-automation.mdc  code-review-and-quality.mdc  code-simplification.mdc  context-engineering.mdc  debugging-and-error-recovery.mdc  deprecation-and-migration.mdc  documentation-and-adrs.mdc  doubt-driven-development.mdc  elytra-and-testing.mdc  frontend-ui-engineering.mdc  git-workflow-and-versioning.mdc  idea-refine.mdc  incremental-implementation.mdc  interview-me.mdc  orchestration-patterns.mdc  performance-checklist.mdc  performance-optimization.mdc  planning-and-task-breakdown.mdc  security-and-hardening.mdc  security-checklist.mdc  shipping-and-launch.mdc  source-driven-development.mdc  spec-driven-development.mdc  test-driven-development.mdc  testing-patterns.mdc  using-agent-skills.mdc
habitat3-exploration/: .dockerignore  .gitignore  README.md  project.yaml
habitat3-exploration/real/: .env.example  README.md
habitat3-exploration/ros_workspace/: design_doc.md
habitat3-exploration/ros_workspace/src/explorer_bridge/: package.xml  setup.cfg  setup.py
habitat3-exploration/ros_workspace/src/explorer_bridge/explorer_bridge/: __init__.py  cmd_vel_to_discrete.py  cmd_vel_to_discrete_node.py  depth_camera_info_node.py  depth_to_laserscan_node.py  driver_protocol.py  explorer_bridge_node.py  habitat_driver.py  habitat_ipc.py  habitat_map_node.py  hardware_driver.py  image_utils.py  known_pose_mapper_node.py  mock_driver.py  scan_from_depth.py  scan_to_occupancy.py
habitat3-exploration/ros_workspace/src/explorer_bridge/launch/: habitat_sim.launch.py
habitat3-exploration/ros_workspace/src/explorer_bridge/test/: conftest.py  long_range_scenes.py  test_bridge_ipc_extensions.py  test_bridge_mock_engine.py  test_bridge_negative.py  test_cmd_vel_to_discrete.py  test_depth_camera_info_sync.py  test_habitat_ros_pose.py  test_harness_controls.py  test_image_utils.py  test_long_range_mapping.py  test_scan_from_depth.py  test_scan_to_occupancy.py  test_tf_keepalive.py
habitat3-exploration/ros_workspace/src/explorer_mission/: CMakeLists.txt  package.xml  setup.cfg  setup.py
habitat3-exploration/ros_workspace/src/explorer_mission/config/: nav2_params.yaml  slam_toolbox.yaml
habitat3-exploration/ros_workspace/src/explorer_mission/explorer_mission/: current_frontier_view_node.py  frontier_debug_overlay.py  maprender_node.py
habitat3-exploration/ros_workspace/src/explorer_mission/explorer_mission/vlm/: gemini_auth.py  parsing.py  vlm_node.py
habitat3-exploration/ros_workspace/src/explorer_mission/explorer_mission/vlm/backends/: __init__.py  base.py  gemini.py  ollama.py
habitat3-exploration/ros_workspace/src/explorer_mission/include/explorer_mission/: discrete_navigator.hpp  frontier_detection.hpp  frontier_tree.hpp  graph_logic.hpp  nav2_navigator.hpp
habitat3-exploration/ros_workspace/src/explorer_mission/launch/: exploration.launch.py  nav2_exploration.launch.py  navigation_sim.launch.py
habitat3-exploration/ros_workspace/src/explorer_mission/resource/: explorer_mission
habitat3-exploration/ros_workspace/src/explorer_mission/src/: actions_node.cpp  discrete_navigator.cpp  explore_node.cpp  frontier_detection.cpp  frontier_tree.cpp  frontier_vlm_client_node.cpp  frontiers_node.cpp  graph_logic.cpp  graph_node.cpp  nav2_navigator.cpp
habitat3-exploration/ros_workspace/src/explorer_mission/test/: test_discrete_navigator.cpp  test_frontier_detection.cpp  test_frontier_tree.cpp  test_graph_logic.cpp  test_harness.cpp
habitat3-exploration/ros_workspace/src/explorer_mission/test_py/: test_frontier_debug_overlay.py  test_goal_accept_radius.py  test_harness_controls.py  test_launch_executables.py  test_maprender.py  test_nav2_params.py  test_navigation_sim_launch.py  test_vlm_node.py  test_vlm_parsing.py
habitat3-exploration/ros_workspace/src/explorer_msgs/: CMakeLists.txt  package.xml
habitat3-exploration/ros_workspace/src/explorer_msgs/action/: DiscreteMove.action  FrontierViewsProcess.action  PerceiveAndCapture.action  RateFrontierOpenness.action  Rotate360.action
habitat3-exploration/ros_workspace/src/explorer_msgs/msg/: Edge.msg  ExplorationStatus.msg  Frontier.msg  FrontierArray.msg  FrontierOpennessScores.msg  FrontierTree.msg  FrontierTreeNode.msg  FrontierViews.msg  Graph.msg
habitat3-exploration/ros_workspace/src/explorer_msgs/srv/: AddEdge.srv  RunDijkstra.srv
habitat3-exploration/sim/: .env.example
habitat3-exploration/sim/docker/: Dockerfile  docker-compose.yml  entrypoint.sh
habitat3-exploration/sim/scripts/: benchmark_vlm.py  cleanup_episode.sh  depth_debug_viz.py  discrete_move.sh  download_data.sh  elytra_view_server.py  ensure_display.sh  explore_episode.py  explored_map.py  habitat_engine.py  habitat_ros_pose.py  live_viewer.py  run_movement_demo.sh  run_ros_tests.sh  run_smoke_test.sh  set_dfs_order.sh  smoke_test.py  start_sim.sh  stop_sim.sh  teleop_step.sh  test_cleanup_episode.py  test_depth_debug_viz.py  test_depth_scan_range.py  test_dfs_order_buttons.py  test_discrete_move_buttons.py  test_explored_map.py  test_habitat_ros_pose.py  verify_exploration_stack.py
