<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>explorer_mission</name>
  <version>0.1.0</version>
  <description>VLM-aided frontier exploration mission (ported from rtabmap_docker)</description>
  <maintainer email="team@example.com">Explorer Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>nav_msgs</depend>
  <depend>map_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>explorer_msgs</depend>

  <build_depend>libopencv-dev</build_depend>
  <build_depend>libboost-graph-dev</build_depend>

  <exec_depend>libopencv-dev</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-requests</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
